--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.9",
-    "react-native-dotenv": "^0.2.0"
+    "react-native": "0.59.9"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
@@ -17,6 +16,7 @@
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
