--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.9",
+    "react-native": "^0.59.9",
     "react-native-elements": "^1.1.0",
     "react-native-vector-icons": "^6.5.0"
   },
