--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -7,8 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^8.0.0",
     "react": "16.8.3",
-    "react-native": "0.59.9"
+    "react-native": "0.59.9",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-navigation-bar": "^0.2.1",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
