--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.29",
+    "aws-amplify-react-native": "^2.1.13",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-elements": "^1.1.0",
