--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -7,7 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "aws-amplify": "^1.1.29",
+    "@aws-amplify/auth": "^1.2.25",
+    "@aws-amplify/core": "^1.0.28",
     "aws-amplify-react-native": "^2.1.13",
     "react": "16.8.3",
     "react-native": "0.59.9",
@@ -23,7 +24,8 @@
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-native-dotenv": "^0.2.0",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "amazon-cognito-auth-js": "^1.3.2"
   },
   "jest": {
     "preset": "react-native"
