--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -10,12 +10,14 @@
     "@aws-amplify/auth": "^1.2.25",
     "@aws-amplify/core": "^1.0.28",
     "aws-amplify-react-native": "^2.1.13",
+    "formik": "^1.5.7",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.5.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
