--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -17,6 +17,8 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
     "yup": "^0.27.0"
   },
   "devDependencies": {
