--- a/BizTechApp/package.json
+++ b/BizTechApp/package.json
@@ -19,6 +19,7 @@
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
   },
