--- a/BizTechApp/android/app/build.gradle
+++ b/BizTechApp/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-square-in-app-payments')
     implementation project(':amazon-cognito-identity-js')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
