--- a/BizTechApp/android/settings.gradle
+++ b/BizTechApp/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'BizTechApp'
+include ':react-native-square-in-app-payments'
+project(':react-native-square-in-app-payments').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-square-in-app-payments/android')
 include ':amazon-cognito-identity-js'
 project(':amazon-cognito-identity-js').projectDir = new File(rootProject.projectDir, '../node_modules/amazon-cognito-identity-js/android')
 include ':react-native-vector-icons'
