--- a/amplify/backend/auth/btweb0aa335ef/btweb0aa335ef-cloudformation-template.yml
+++ b/amplify/backend/auth/btweb0aa335ef/btweb0aa335ef-cloudformation-template.yml
@@ -142,9 +142,6 @@ Parameters:
   hostedUIProviderMeta:
     Type: String
             
-  hostedUIProviderCreds:
-    Type: String
-            
   oAuthMetadata:
     Type: String
           
@@ -232,7 +229,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: bizteca826270d_app_clientWeb
+      ClientName: btweb00aa335ef_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -295,7 +292,7 @@ Resources:
             - ' }'
             - '};'
       Handler: index.handler
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: '300'
       Role: !GetAtt 
         - UserPoolClientRole
@@ -711,7 +708,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'biztechappa826270d_identitypool_a826270d', !Join ['',['biztechappa826270d_identitypool_a826270d', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'btweb0aa335ef_identitypool_0aa335ef', !Join ['',['btweb0aa335ef_identitypool_0aa335ef', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
