--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@aws-amplify/core": "^1.0.28",
     "aws-amplify-react-native": "^2.1.15",
     "formik": "^1.5.7",
-    "react": "16.8.3",
+    "jetifier": "^1.6.5",
+    "react": "16.9.0",
     "react-native": "0.59.9",
     "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
