--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.59.9",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-snap-carousel": "^3.8.4",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
